# icemodel

./: .gitignore  LAUNDRY_LIST.md  LICENSE  README.md  pyproject.toml  type_gaps.py
.claude/memory/: MEMORY.md  feedback_uv_run.md  project_plugin_gaps.md
.githooks/: pre-commit
icemodel/: __init__.py  _connection.py  _migrations.py  _model.py  _query_builder.py  _raw.py  _relations.py  _utils.py  migrate.py  mypy_plugin.py  schema.py
plugin/: README.md  mypy_plugin.py
src/icemodel/: __init__.py  _query_builder.py  _relations.py  _utils.py  schema.py
src/ormen/: __init__.py  _connection.py  _model.py  _query_builder.py  _relations.py  _utils.py
tests/: conftest.py  models.py  test_crud.py  test_migrations.py  test_queries.py  test_raw.py  test_relations.py  test_schema.py  test_type_safety.py  test_validation.py
tests/plugin/: conftest.py  test_cross_model.py  test_fields.py  test_gap1_fields_and_partial.py  test_partial.py  test_patch.py  test_raw_query.py  test_update.py
