[project]
name = "icemodel"
version = "0.1.0"
description = "Minimal Python ORM with frozen dataclasses, fluent queries, and zero dependencies"
readme = "README.md"
authors = [
    { name = "papplegate", email = "papplega@gmail.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "mypy>=2.1.0",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.setuptools]
packages = ["icemodel"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
files = ["icemodel"]

[tool.pylint.main]
source-roots = ["."]

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
]
