[project]
name = "icemodel"
version = "0.1.0"
description = "Minimal Python ORM with frozen dataclasses, fluent queries, and zero dependencies"
readme = "README.md"
license = "MIT"
authors = [
    { name = "papplegate", email = "papplega@gmail.com" }
]
keywords = ["orm", "sqlite", "dataclasses", "typed", "database"]
requires-python = ">=3.12"
dependencies = []
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Typing :: Typed",
]

[project.urls]
Repository = "https://github.com/papplegate/icemodel"
Issues = "https://github.com/papplegate/icemodel/issues"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[dependency-groups]
dev = [
    "black>=24.0.0",
    "mypy>=2.1.0",
    "pylint>=4.0.5",
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
]

[tool.setuptools]
packages = ["icemodel"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.mypy]
strict = true
files = ["icemodel", "tests", "plugin"]
plugins = ["plugin.mypy_plugin"]

[tool.pylint.main]
source-roots = ["."]
extension-pkg-allow-list = ["mypy"]

[tool.pylint."messages control"]
disable = [
    "missing-module-docstring",
    "missing-class-docstring",
    "missing-function-docstring",
    "too-few-public-methods",
    "import-outside-toplevel",
    "attribute-defined-outside-init",
    "too-many-locals",
]
